--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "vite": "^6.0.5"
   },
   "dependencies": {
+    "konva": "^9.3.18",
     "mediasoup-client": "^3.8.1",
     "socket.io-client": "^4.8.1"
   }
